app/main/styles/Main.css
.app-background {
    background-color: #141616;
    height: 100vh;
}


/* .main-signout-button
{
    font-size: large;
    height: auto;
    padding: 10px;
    border-radius: 5px;
    background-color: red;
} */
/* .main-signin-button {
    background-color: white;
    margin-right: 100px;
    font-size: large;
    padding: 10px;
    border-radius: 5px;
    background-color: rgb(155, 155, 164);
} */

.profile-photo {
    height: 50px;
    width: 50px;
    border-radius: 50%;
    align-items: center;
    justify-content: center;
}


.profile-photo-div {
    height: 50px;

    margin-right: 100px;
    width: 50px;
    border-radius: 50%;
    align-items: center;
    justify-content: center;
}

.user-info {
    align-items: center;
    color: white;
    text-align: center;
}

.dropdown-menu {
    height: 200px;
    width: auto;
    padding: 30px;
    padding-top: 5px;
    background-color: black;
    border-radius: 20px;
    position: absolute;
    right: 40px;
    top: 80px;
    transition-duration: 0.5s;
    display: flex;
    flex-direction: column;
    font-size: medium;
    text-align: center;
}



.profile-left {
    width: 30vw;
    height: 100%;
    padding-top: 20vh;
    padding-left: 20vh;
}

.profile-photo-main {
    border-radius: 50%;
    height: 30vh;
    image-rendering: auto;
}

